cmake_minimum_required(VERSION 3.22.0)
cmake_policy(SET CMP0016 NEW)
set(CMAKE_CXX_STANDARD 17)
project(async_server VERSION 1.0.0 DESCRIPTION "Знакомство с асинхронным вводом/выводом на C++")
find_package(Boost 1.82.0)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${CMAKE_SOURCE_DIR}/src)
# add_subdirectory(${CMAKE_SOURCE_DIR}/src/async_server)
add_executable(tcp_server ${CMAKE_SOURCE_DIR}/src/async_server/tcp_server.cpp)
add_executable(tcp_client ${CMAKE_SOURCE_DIR}/src/async_server/tcp_client.cpp)
